--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,11 @@
   --primary-200: #c5b6ea;
 
   --white: #ffffff;
+
+  --zindex-selectbox-dropdown: 999;
+  --zindex-gnb: 1000;
+
+  --size-gnb: 81px;
 }
 
 body {
@@ -33,10 +38,20 @@ body {
   color: var(--white);
 }
 
+.title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 36px;
+  letter-spacing: 0.01em;
+}
+
 .section-title {
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
   letter-spacing: 0.01em;
   color: var(--gray-500);
+
+  margin-left: 4px;
+  margin-bottom: 12px;
 }
