fix: Load .env to next server

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,7 +35,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
   background-color: var(--black);
   color: var(--white);
 }
